--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                     <!-- </a> -->
                 </div>
 
-                <form action="https://formspree.io/f/mwkgbeaa" class="contact_form grid" id="contact-form" method="POST">
+                <form action="https://formspree.io/f/xpwrblyk" class="contact_form grid" id="contact-form" method="POST">
                     <div id="alert" class="alert_style"></div>
                     <div class="contact_inputs grid">
                         <div class="contact_content">
